change path in cca

--- a/src_alex/case_2_cca.ipynb
+++ b/src_alex/case_2_cca.ipynb
@@ -47,12 +47,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "3487461b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_path = '../../case_2-main/data/HR_data.csv'\n",
+    "data_path = '../../case_2/data/HR_data.csv'\n",
     "\n",
     "data_pd = pd.read_csv(data_path)"
    ]
