--- a/src_johan/case_2_johan.ipynb
+++ b/src_johan/case_2_johan.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 2,
    "id": "c0dc5916",
    "metadata": {},
    "outputs": [],
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 6,
    "id": "d1730935",
    "metadata": {},
    "outputs": [
@@ -53,7 +53,8 @@
      "output_type": "stream",
      "text": [
       "The dataset has 312 rows and 68 columns.\n",
-      "Does the dataset have missing values? True\n"
+      "Does the dataset have missing values? True\n",
+      "Columns with missing values: ['EDA_TD_P_RT', 'EDA_TD_P_ReT', 'inspired', 'attentive', 'afraid', 'active', 'determined']\n"
      ]
     }
    ],
@@ -71,7 +72,11 @@
     "print(f\"The dataset has {data.shape[0]} rows and {data.shape[1]} columns.\")\n",
     "\n",
     "# Checking for missing values (True/False)\n",
-    "print(\"Does the dataset have missing values?\", data.isnull().values.any())"
+    "print(\"Does the dataset have missing values?\", data.isnull().values.any())\n",
+    "\n",
+    "# Show the columns with missing values\n",
+    "missing_columns = data.columns[data.isnull().any()].tolist()\n",
+    "print(\"Columns with missing values:\", missing_columns)"
    ]
   },
   {
@@ -92,18 +97,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 8,
    "id": "40644bc4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Does the dataset have missing values? False\n"
+     ]
+    }
+   ],
    "source": [
+    "# Mean Imputation: Using SimpleImputer from scikit-learn to impute the missing values in the data (for numerical variables) with the mean\n",
+    "numerical_imputer = SimpleImputer(strategy='mean')\n",
+    "\n",
+    "# Imputing the missing numerical values in the data with the mean (for columns 'EDA_TD_P_RT', 'EDA_TD_P_ReT')\n",
+    "data[['EDA_TD_P_RT', 'EDA_TD_P_ReT']] = numerical_imputer.fit_transform(data[['EDA_TD_P_RT', 'EDA_TD_P_ReT']])\n",
+    "\n",
     "# Mode Imputation: Using SimpleImputer from scikit-learn to impute the missing values in the data (for categorical variables) with the most frequent value\n",
     "categorical_imputer = SimpleImputer(strategy='most_frequent')\n",
     "data = categorical_imputer.fit_transform(data)\n",
     "\n",
     "# Converting the imputed data back to a DataFrame\n",
-    "data = pd.DataFrame(data, columns=columns)"
+    "data = pd.DataFrame(data, columns=columns)\n",
+    "\n",
+    "# Checking for missing values (True/False)\n",
+    "print(\"Does the dataset have missing values?\", data.isnull().values.any())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "85ae6936",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -126,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": null,
    "id": "41608c11",
    "metadata": {},
    "outputs": [
@@ -178,7 +208,7 @@
     }
    ],
    "source": [
-    "print(data)"
+    "print"
    ]
   },
   {
