--- a/src_johan/case_2_johan.ipynb
+++ b/src_johan/case_2_johan.ipynb
@@ -54,7 +54,9 @@
      "text": [
       "The dataset has 312 rows and 68 columns.\n",
       "Does the dataset have missing values? True\n",
-      "Columns with missing values: ['EDA_TD_P_RT', 'EDA_TD_P_ReT', 'inspired', 'attentive', 'afraid', 'active', 'determined']\n"
+      "Columns with missing values: ['EDA_TD_P_RT', 'EDA_TD_P_ReT', 'inspired', 'attentive', 'afraid', 'active', 'determined']\n",
+      "Total number of columns starting with 'EDA', 'TEMP', or 'HR': 51\n",
+      "Number of columns in the dataset: 68\n"
      ]
     }
    ],
@@ -76,7 +78,14 @@
     "\n",
     "# Show the columns with missing values\n",
     "missing_columns = data.columns[data.isnull().any()].tolist()\n",
-    "print(\"Columns with missing values:\", missing_columns)"
+    "print(\"Columns with missing values:\", missing_columns)\n",
+    "\n",
+    "# Show the total number of columns starting with either 'EDA', 'TEMP', or 'HR'\n",
+    "eda_columns = [col for col in columns if col.startswith(('EDA', 'TEMP', 'HR'))]\n",
+    "print(\"Total number of columns starting with 'EDA', 'TEMP', or 'HR':\", len(eda_columns))\n",
+    "\n",
+    "# Print number of columns\n",
+    "print(\"Number of columns in the dataset:\", len(columns))"
    ]
   },
   {
